# PalForth

./: .gitignore  Cargo.toml  Makefile  README.md  arena.c  arena.h  config.h  ctypes.h  errors.h  header_impels.c  jit_test.cpp  jiting_test.c  stack.h  test.c  types.c  vm.c  vm.h
c_legacy/: arena.h  config.h  cutf8.h  stack  test.c  types.h  utils.h  vm.c  vm.h
c_legacy/jit_things/: jit_test.cpp
jit_things/: compiler_test.c
rust_rewerite_maybe/: Cargo.toml
rust_rewerite_maybe/src/: buildins.rs  lib.rs  stack.rs  test.rs  types.rs  vm.rs
src/: buildins.rs  input.rs  ir.rs  lex.rs  lib.rs  main.rs  make_stack.rs  stack.rs  test.rs  types.rs  vm.rs
test_panic/: Cargo.toml
test_panic/src/: main.rs
