[package]
name = "pal_forth"
version = "0.1.0"
edition = "2024"

[features]
default = []
unchecked_underflow = []
unchecked_overflow = []
std = ["no_std_io/std"]
trace_vm=["std"]
flaky_tests=[]

[dependencies]
hashbrown = { version = "0.15.4", default-features = false,features=["default-hasher"] }
no_std_io = "0.6.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.174"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt"] }

[profile.release]
panic = "abort"
