[package]
name = "rust_rewerite_maybe"
version = "0.1.0"
edition = "2024"

[features]
default = []                     # No features enabled by default
unchecked_underflow = []         # Enables unchecked pop/spot
unchecked_overflow = []          # Enables unchecked push
trace_vm=[]

[dependencies]
